# radeon-profile

./: .gitignore  README  README.md  flatpak-builder.json  main.c  radeon_ioctl.c  radeon_ioctl.h  radeon_ioctl.pro
ioctl/: findCard.sh  main.c  radeon_ioctl.h  radeon_ioctl.pro
radeon-profile/: CMakeLists.txt  Doxyfile  configure  daemonComm.cpp  daemonComm.h  dfglrx.cpp  dfglrx.h  dialog_defineplot.cpp  dialog_defineplot.h  dialog_defineplot.ui  dialog_rpevent.cpp  dialog_rpevent.h  dialog_rpevent.ui  dialog_topbarcfg.cpp  dialog_topbarcfg.h  dialog_topbarcfg.ui  dintel.cpp  dintel.h  dxorg.cpp  dxorg.h  eventsTab.cpp  execTab.cpp  exec_bin.ui  execbin.cpp  execbin.h  export_dialog.ui  fanControlTab.cpp  globalStuff.cpp  globalStuff.h  gpu.cpp  gpu.h  ioctlHandler.cpp  ioctlHandler.h  ioctlHandler.hpp  ioctl_amdgpu.cpp  ioctl_radeon.cpp  main.cpp  plotsTab.cpp  qcustomplot.cpp  qcustomplot.h  (+18 more)
radeon-profile/components/: pieprogressbar.h  pieprogressbar.ui  rpplot.h  slider.h  slider.ui  topbarcomponents.h
radeon-profile/dialogs/: dialog_defineplot.cpp  dialog_defineplot.h  dialog_defineplot.ui  dialog_deinetopbaritem.cpp  dialog_deinetopbaritem.h  dialog_deinetopbaritem.ui  dialog_plotsconfiguration.cpp  dialog_plotsconfiguration.h  dialog_plotsconfiguration.ui  dialog_rpevent.cpp  dialog_rpevent.h  dialog_rpevent.ui  dialog_sliders.cpp  dialog_sliders.h  dialog_sliders.ui  dialog_topbarcfg.cpp  dialog_topbarcfg.h  dialog_topbarcfg.ui
radeon-profile/extra/: CMakeLists.txt  com.github.marazmista.radeon-profile.appdata.xml  radeon-profile.appdata.xml  radeon-profile.desktop
radeon-profile/translations/: CMakeLists.txt  strings.hr.ts  strings.it.ts  strings.pl.ts  strings.ru.ts
radeon-profile/variables/: envVars
